--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/moonlay-technologies/academy-models#readme",
   "dependencies": {
-    "capital-models": "git+https://github.com/pinkgorilla/capital-models.git",
+    "model-toolkit": "git+https://github.com/pinkgorilla/model-toolkit.git",
     "should": "^11.1.1"
   },
   "devDependencies": {
